--- a/To-Do List/index.html
+++ b/To-Do List/index.html
@@ -8,13 +8,17 @@
 </head>
 <body>
     <h1>To-do list</h1>
+    
     <div id="list">
         <form id="task-form">
             <input id="to-do_ID" name="tarefa" type="text" placeholder="Digite aqui sua tarefa" />
             <button type="submit" class="btn-add">Adicionar</button>
         </form>
-        <div id="tasks"></div>
+        <div id="to-doTasks"></div>
     </div>
+
+
+
     <script src="assets/js/scripts.js"></script>
 </body>
 </html>
